# ProgrammationCPP3D

./: .gitignore  CMakeLists.txt  OPENGL.txt  bunny.off  cube.off  main.cpp  makefile
src/: old.cpp
src/core/: Axis.cpp  Axis.hpp  BernsteinBezierCurve.cpp  BernsteinBezierCurve.hpp  BezierCurve.cpp  BezierCurve.hpp  Camera.cpp  Camera.hpp  Curve.cpp  Curve.hpp  DeCasteljauBezierCurve.cpp  DeCasteljauBezierCurve.hpp  EulerCamera.cpp  EulerCamera.hpp  GL3D.cpp  GLCoreRendering.cpp  GLRenderable.hpp  GlCoreRendering.hpp  HermiteCubicCurve.cpp  HermiteCubicCurve.hpp  Point.cpp  Point.hpp  PolarPoint.cpp  PolarPoint.hpp  STLWriter.cpp  STLWriter.h  Vector.cpp  Vector.cpp~  Vector.hpp  core-declaration.hpp
src/core2.0/: Transform.hpp
src/curves/: BernsteinBezierCurve.cpp  BernsteinBezierCurve.hpp  BezierCurve.cpp  BezierCurve.hpp  DeCasteljauBezierCurve.cpp  DeCasteljauBezierCurve.hpp  HermiteCubicCurve.cpp  HermiteCubicCurve.hpp
src/glWrappers/: Camera.cpp  Camera.hpp  EulerCamera.cpp  EulerCamera.hpp  GLCoreRendering.cpp  GlCoreRendering.hpp
src/math/: Quaternion.hpp  Vector3.hpp
src/meshing/: AutoCenter.cpp  AutoCenter.h  FigureConverter.cpp  IdTriangle.cpp  IdTriangle.hpp  Mesh.cpp  Mesh.hpp  OffManipulator.cpp  OffManipulator.hpp  TopoEdge.cpp  TopoEdge.h  TopoFace.cpp  TopoFace.h  TopoMesh.cpp  TopoMesh.h  TopoPoint.cpp  TopoPoint.h  core_declaration.h
src/octree/: AdaptativeOctree.cpp  AdaptativeOctree.hpp  DivideAdaptiveOctree.cpp  DivideAdaptiveOctree.hpp  IntersectAdaptiveOctree.cpp  IntersectAdaptiveOctree.hpp  TwoShapeAdaptiveOctree.hpp  UnionAdaptiveOctree.cpp  UnionAdaptiveOctree.hpp
src/primitives/: Cone.cpp  Cone.hpp  Cylinder.cpp  Cylinder.hpp  Disc.cpp  Disc.hpp  Grid.cpp  Grid.h  GridDecimer.cpp  GridDecimer.h  GridVoxel.cpp  GridVoxel.h  Shape.cpp  Shape.hpp  Sphere.cpp  Sphere.hpp  Voxel.cpp  Voxel.hpp
src/segmentation/: Propagation.cpp  Propagation.hpp
src/surfaces/: BezierSurface.cpp  BezierSurface.hpp  CylindricSurface.cpp  CylindricSurface.hpp  RuledSurface.cpp  RuledSurface.hpp  Surface.cpp  Surface.hpp  SurfacicSquare.cpp  SurfacicSquare.hpp
src/tp/: TP_OPENGL.cpp  test.cpp  tp2.cpp
src/tp3/: mainCylindricSurface.cpp  mainRuledSurf.cpp  mainStange.cpp  tp3.cpp
src/tp4/: Cylinder.hpp  mainCone.cpp  mainCylinder.cpp  mainSphere.cpp  tp4.cpp
src/tp5/: AdaptativeOctree.cpp  AdaptativeOctree.hpp  Octree.cpp  Octree.h  TwoShapeAdaptiveOctree.cpp  mainCylinder.cpp  mainDivide.cpp  mainIntersect.cpp  mainUnion.cpp  voxel.cpp
src/tp6/: mainOffReader.cpp
src/tp7/: FigureConverter.cpp  FigureConverter.hpp  TopoEdge.cpp  TopoEdge.h  TopoFace.cpp  TopoFace.h  TopoMesh.cpp  TopoMesh.h  TopoPoint.cpp  TopoPoint.h  mainDebuggingTopoMesh.cpp  mainTp7.cpp  mainTp7Cylinder-active-edges.cpp  mainTp7Cylinder.cpp  mainTp7GaussianSphere.cpp  mainTp7Sphere-active-edges.cpp  mainTp7Sphere.cpp
src/tp8/: mainSegmentation.cpp
src/tp9/: mainCubeFusionTest.cpp  mainDecimation.cpp  mainSubdivision.cpp
src/volumes/: Voxel.cpp  Voxel.hpp
